// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterReducers should handle all defined types: defined types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_ADD_FILTER",
}
`;

exports[`FilterReducers should handle all defined types: defined types 2`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_CLEAR_FILTERS",
}
`;

exports[`FilterReducers should handle all defined types: defined types 3`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_REMOVE_FILTER",
}
`;

exports[`FilterReducers should handle all defined types: defined types 4`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_SET_DATE_TYPE",
}
`;

exports[`FilterReducers should handle all defined types: defined types 5`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_CLEAR_DATE_TYPE",
}
`;

exports[`FilterReducers should handle all defined types: defined types 6`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_SET_FILTER_TYPE",
}
`;

exports[`FilterReducers should handle all defined types: defined types 7`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_SET_FILTER_VALUE",
}
`;

exports[`FilterReducers should handle all defined types: defined types 8`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_SET_SORT_TYPE",
}
`;

exports[`FilterReducers should handle all defined types: defined types 9`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOOLBAR_TOGGLE_SORT_ASCENDING",
}
`;

exports[`FilterReducers should handle specific account fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 2,
      "totalPages": 1,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "GET_ACCOUNTS_FULFILLED",
}
`;

exports[`FilterReducers should handle specific account fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "account": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "accountGlobal": Object {
      "dateValue": null,
      "dateValueDefault": false,
      "sortAscending": true,
      "sortValue": null,
    },
    "accountImages": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "dateValue": null,
      "dateValueDefault": false,
      "expandedItems": Array [],
      "filterField": null,
      "filterValue": "",
      "pageSize": 15,
      "selectedCount": 0,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortValue": null,
      "syncView": null,
      "totalCount": 2,
      "totalPages": 1,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;
